# framework.appfw.app-core

./: .gitignore  CMakeLists.txt  appcore-common.pc.in
include/: appcore-common.h  appcore-efl.h  appcore-internal.h  virtual_canvas.h
packaging/: app-core.spec
src/: appcore-X.c  appcore-efl.c  appcore-group.c  appcore-i18n.c  appcore-measure.c  appcore-rotation.c  appcore.c  virtual_canvas.c
